--- a/AngularClient/Content/sidebar.css
+++ b/AngularClient/Content/sidebar.css
@@ -8,7 +8,7 @@
 #sidebar-wrapper {
     z-index: 1;
     position: absolute;
-    height: 100%;
+   // height: 100%;
     overflow-y: hidden;
     background: #2C3E50;
     padding-top: 10px;
