--- a/AngularClient/Content/sidebar.css
+++ b/AngularClient/Content/sidebar.css
@@ -6,20 +6,23 @@
 }
 
 #sidebar-wrapper {
-    z-index: 1;
-    position: absolute;
-   // height: 100%;
-    overflow-y: hidden;
+    height: 100%;
     background: #2C3E50;
     padding-top: 10px;
     color: white;
+    width: 20%;
 }
 
+.contentHidden {
+    display: none;
+}
+
+
 #page-content-wrapper {
-    width: 100%;
-    padding-left: 20%;
-    position: absolute;
+    width: 70%;
     padding-top: 10px;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .sidebar-nav {
@@ -47,7 +50,9 @@
     width: 10%;
 }
 
-
+#wrapper {
+    height:100vh;
+}
 
 .desktopHidden {
     display: none;
@@ -67,14 +72,41 @@
     display: none;
 }
 
+.contentHidden {
+    display: none;
+}
+
 textarea {
     resize: none;
 }
 
+#questionDelete {
+    float:right;
+    width: 8%;
+}
+
+
+#answerDelete {
+    float:right;
+    width: 8%;
+}
+
+#questionString {
+        width: 90%;
+      
+    }
+
+    #answerString {
+        width: 90%;
+       
+    }
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 500px) {
 
-
+    #sidebar-wrapper {
+        width: 100%;
+        height:100vh;
+    }
     .navbar-brand {
         width: 80%;
         text-align: center;
@@ -105,6 +137,7 @@ textarea {
 
     #page-content-wrapper {
         padding-left: 0%;
+         width:100%;
     }
 
     .glyphicon {
@@ -130,26 +163,27 @@ textarea {
         width: 100%;
     }
 
-    #question {
-        width: 80%;
+    #questionString {
+        width: 85%;
         display: inline-block;
-        padding-right: 2%;
+        padding:0;
+       
     }
 
-    #questionDelete {
-        width: 15%;
+    #answerString {
+        width: 85%;
         display: inline-block;
+        padding:0;
+       
     }
 
-    #answer {
-        width: 80%;
-        display: inline-block;
-        padding-right: 2%;
+   #questionDelete {
+     width: 10%;
     }
+
 
     #answerDelete {
-        width: 15%;
-        display: inline-block;
+    width: 10%;
     }
 
     .brandName {
@@ -162,6 +196,7 @@ textarea {
         top: 30%;
         left: 40%;
     }
+    
 }
 
 /*desktop */
