--- a/AngularClient/Content/sidebar.css
+++ b/AngularClient/Content/sidebar.css
@@ -51,7 +51,7 @@
 }
 
 #wrapper {
-    height:100vh;
+    height: 100vh;
 }
 
 .desktopHidden {
@@ -81,32 +81,33 @@ textarea {
 }
 
 #questionDelete {
-    float:right;
+    float: right;
     width: 8%;
 }
 
 
 #answerDelete {
-    float:right;
+    float: right;
     width: 8%;
 }
 
 #questionString {
-        width: 90%;
-      
-    }
+    width: 90%;
+    padding-left: 0;
+}
 
-    #answerString {
-        width: 90%;
-       
-    }
+#answerString {
+    width: 90%;
+    padding-left: 0;
+}
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 500px) {
 
     #sidebar-wrapper {
         width: 100%;
-        height:100vh;
+        height: 100vh;
     }
+
     .navbar-brand {
         width: 80%;
         text-align: center;
@@ -137,7 +138,7 @@ textarea {
 
     #page-content-wrapper {
         padding-left: 0%;
-         width:100%;
+        width: 100%;
     }
 
     .glyphicon {
@@ -166,24 +167,22 @@ textarea {
     #questionString {
         width: 85%;
         display: inline-block;
-        padding:0;
-       
+        padding: 0;
     }
 
     #answerString {
         width: 85%;
         display: inline-block;
-        padding:0;
-       
+        padding: 0;
     }
 
-   #questionDelete {
-     width: 10%;
+    #questionDelete {
+        width: 10%;
     }
 
 
     #answerDelete {
-    width: 10%;
+        width: 10%;
     }
 
     .brandName {
@@ -196,7 +195,6 @@ textarea {
         top: 30%;
         left: 40%;
     }
-    
 }
 
 /*desktop */
