--- a/AngularClient/Content/sidebar.css
+++ b/AngularClient/Content/sidebar.css
@@ -104,6 +104,15 @@ textarea {
     width: 90%;
     padding-left: 0;
 }
+
+.pollQuestionPanel {
+    margin:0 auto;
+    float:none;
+}
+
+.btnVotedViewResults {
+    width:100%;
+}
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 500px) {
 
