--- a/AngularClient/Content/sidebar.css
+++ b/AngularClient/Content/sidebar.css
@@ -1,4 +1,6 @@
-﻿
+﻿[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
 .navbar {
     margin-bottom: 0;
     border-bottom-left-radius: 0;
