--- a/AngularClient/Content/footer.css
+++ b/AngularClient/Content/footer.css
@@ -1,184 +1,10 @@
-﻿footer {
-    padding-top: 50%;
+﻿.footer {
+    text-align: center;
+    padding-bottom: 15px;
     text-decoration: none;
+    background-color: #EDEDED;
 }
 
-.footer-distributed {
-    background:lightgrey ; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(left top, #2C3E50, white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom right, #2C3E50, white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom right, #2C3E50, white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom right, #2C3E50, white); /* Standard syntax */
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: bold 16px sans-serif;
-    padding: 10px 50px;
-    margin-top: 80px;
-}
-
-
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-center,
-    .footer-distributed .footer-right {
-        display: inline-block;
-        vertical-align: top;
+    .footer a {
+        color: #2F3E47;
     }
-
-    /* Footer left */
-
-    .footer-distributed .footer-left {
-        width: 25%;
-    }
-
-    /* The company logo */
-
-    .footer-distributed h3 {
-        color: #ffffff;
-        font: normal 36px 'Cookie', cursive;
-        margin: 0;
-    }
-
-        .footer-distributed h3 span {
-            color: #5383d3;
-        }
-
-    /* Footer links */
-
-    .footer-distributed .footer-links {
-        color: #ffffff;
-        margin: 20px 0 12px;
-        padding: 0;
-    }
-
-        .footer-distributed .footer-links a {
-            display: inline-block;
-            line-height: 1.8;
-            text-decoration: none;
-            color: inherit;
-        }
-
-.footer-company-name {
-    padding-top: 3%;
-    padding-bottom: 3%;
-}
-
-.footer-distributed .footer-company-name {
-    color: #8f9296;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-}
-
-/* Footer Center */
-
-.footer-distributed .footer-center {
-    width: 40%;
-    text-align: center;
-}
-
-    .footer-distributed .footer-center i {
-        background-color: #33383b;
-        color: #ffffff;
-        font-size: 25px;
-        width: 38px;
-        height: 38px;
-        border-radius: 50%;
-        text-align: center;
-        line-height: 42px;
-        margin: 10px 15px;
-        vertical-align: middle;
-    }
-
-        .footer-distributed .footer-center i.fa-envelope {
-            font-size: 17px;
-            line-height: 38px;
-        }
-
-    .footer-distributed .footer-center p {
-        display: inline-block;
-        color: #ffffff;
-        vertical-align: middle;
-        margin: 0;
-    }
-
-        .footer-distributed .footer-center p span {
-            display: block;
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 2;
-        }
-
-        .footer-distributed .footer-center p a {
-            color: #5383d3;
-            text-decoration: none;
-        }
-
-
-/* Footer Right */
-
-.footer-distributed .footer-right {
-    width: 30%;
-    
-}
-
-.footer-distributed .footer-company-about {
-    line-height: 20px;
-    color: #92999f;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-}
-
-    .footer-distributed .footer-company-about span {
-        display: block;
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: bold;
-        margin-bottom: 20px;
-    }
-
-.footer-distributed .footer-icons {
-    margin-top: 25px;
-}
-
-a {
-    color: black;
-}
-
-.footer-distributed .footer-icons a {
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    border-radius: 2px;
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    line-height: 35px;
-    margin-right: 3px;
-    margin-bottom: 5px;
-}
-
-/* If you don't want the footer to be responsive, remove these media queries */
-
-@media (max-width: 880px) {
-
-    .footer-distributed {
-        font: bold 14px sans-serif;
-    }
-
-        .footer-distributed .footer-left,
-        .footer-distributed .footer-center,
-        .footer-distributed .footer-right {
-            display: block;
-            width: 100%;
-            margin-bottom: 40px;
-            text-align: center;
-        }
-
-            .footer-distributed .footer-center i {
-                margin-left: 0;
-            }
-}
