--- a/AngularClient/Content/sidebar.css
+++ b/AngularClient/Content/sidebar.css
@@ -1,28 +1,30 @@
 ﻿[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
 }
+
 body {
-color:#2F3E47;
+    color: #2F3E47;
 }
+
 .navbar {
     margin-bottom: 0;
     border-bottom-left-radius: 0;
     text-decoration: none;
-    background-color:#EDEDED;
-   
+    background-color: #EDEDED;
 }
 
 .navbar-default .navbar-brand {
-     color:#2F3E47;
+    color: #2F3E47;
 }
 
 .nav a {
-      color:#2F3E47;
+    color: #2F3E47;
 }
 
 .navbar-default .navbar-text {
-      color:#2F3E47;
+    color: #2F3E47;
 }
+
 .groupPerPagePanel {
     float: none;
     padding-bottom: 10%;
@@ -30,7 +32,7 @@ color:#2F3E47;
 
 #sidebar-wrapper {
     height: 110%;
-    background:  #2F3E47;
+    background: #2F3E47;
     padding-top: 10px;
     color: white;
     width: 20%;
@@ -141,9 +143,9 @@ textarea {
 @media only screen and (max-width : 800px) {
 
     .groupPerPagePanel {
-       padding-bottom: 15%;
+        padding-bottom: 15%;
     }
-    
+
     img {
         max-width: 100%;
         height: auto;
@@ -246,8 +248,6 @@ textarea {
         position: relative;
         width: 100%;
     }
-
- 
 }
 
 /*desktop */
@@ -256,5 +256,8 @@ textarea {
         width: 20%;
         display: inline-block;
     }
-    
+
+    .navbar-right {
+        margin-right: 0;
+    }
 }
