--- a/AngularClient/Content/footer.css
+++ b/AngularClient/Content/footer.css
@@ -1,6 +1,7 @@
 ﻿.footer {
     text-align: center;
     padding-bottom: 15px;
+    padding-top: 15px;
     text-decoration: none;
     background-color: #EDEDED;
     width: 100%;
