--- a/AngularClient/Content/sidebar.css
+++ b/AngularClient/Content/sidebar.css
@@ -153,7 +153,7 @@ textarea {
     width: 100%;
 }
 /* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 800px) {
+@media only screen and (max-width : 700px) {
 
     .groupPerPagePanel {
         padding-bottom: 25px;
@@ -264,7 +264,7 @@ textarea {
 }
 
 /*desktop */
-@media only screen and (min-width : 820px) {
+@media only screen and (min-width : 710px) {
     .mobileSideBarVisible {
         width: 20%;
         display: inline-block;
@@ -272,5 +272,11 @@ textarea {
 
     .navbar-right {
         margin-right: 0;
+    }
+}
+
+@media only screen and (max-width : 800px) {
+    .mobileHidden {
+        display: none !important;
     }
 }
